<resources>
    <string name="app_name">Heal the World</string>
    <string name="hint_enter_a_message">输入你的问题…</string>
    <string name="action_feedback_useful">feedback useful</string>
    <string name="action_copy">已复制到剪切板</string>
    <string name="copied_message">已复制至剪切板</string>
    <string name="feedback_successfully">反馈成功</string>
    <string name="feedback_failed">反馈失败</string>
    <string name="feedback_useful">有用</string>
    <string name="feedback_not_exact_correct">不太准确</string>
    <string name="feedback_wait_to_add">待添加</string>
    <string name="copy">复制</string>
    <string name="cancel">取消</string>
    <string name="menu_item_favorite">收藏</string>
    <string name="favorite">收藏</string>
    <string name="add_to_favorite">已收藏</string>
    <string name="add_to_favorite_successfully">收藏成功</string>
    <string name="add_to_favorite_failed">收藏失败</string>
    <string name="cant_add_to_favorite">用户提问不支持收藏</string>
    <string name="favorite_detail">详情</string>
</resources>